# CUDA_SDR

./: .gitignore  CMakeLists.txt  Plots.ipynb  README.md  acq_sig  corr_sig  gen_sig  recv.cfg  test_iq.bin.tag  testsig.cfg
app/: acq_sig.c  corr_sig.c  gen_sig.c
src/acquisition/: acq_processor.c  acq_processor.h  cn0_estimator.c  cn0_estimator.h  peak_detection.c  peak_detection.h
src/code/: code_gps.c  code_gps.h  getcode.c  getcode.h
src/core/: init_gpu.cu  init_gpu.cuh  params.h  rcv.cu  rcv.cuh  types.h  utils.c  utils.h
src/correlator/: corr_accumulator.c  corr_accumulator.h  corr_interface.c  corr_interface.h  corr_interface_gpu.cu  corr_interface_gpu.cuh  correlator.c  correlator.h  correlator_gpu.cu  correlator_gpu.cuh
src/dsp/: code.c  code.h  code_gpu.cu  code_gpu.cuh  mixer.c  mixer.h  mixer_gpu.cu  mixer_gpu.cuh
src/io/: config_io.c  config_io.h  file_io.c  file_io.h
